--- a/style.css
+++ b/style.css
@@ -1,12 +1,32 @@
 .center {
     display: grid;
     justify-items: center;
+    margin-top: 1rem;
 }
 
-ul {
-    padding-inline-start: 0;
+.create-task-btn {
+    background-color: #4C24FA;
+    color: #FEF6FF;
+    font-size: inherit;
+    padding: 8px 16px 8px 16px;
+    border-style: none;
+    border-radius: 10px;
 }
 
-li::marker {
-    content: none;
+.input-field {
+    font-size: inherit;
+    padding: 8px 16px 8px 16px;;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #362B48;
+    color: #362B48;
+}
+
+.task {
+    background-color: #9A89B4;
+    color: #362B48;
+    margin-bottom: 0.4rem;
+    border-radius: 10px;
+    border-style: none;
+    padding: 0.2rem 0rem 0.2rem 0.4rem
 }
