--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 .input-field {
     font-size: inherit;
-    padding: 8px 16px 8px 16px;;
+    padding: 8px 16px 8px 16px;
     border-radius: 10px;
     border-style: solid;
     border-color: #362B48;
@@ -25,8 +25,20 @@
 .task {
     background-color: #9A89B4;
     color: #362B48;
+    font-size: inherit;
     margin-bottom: 0.4rem;
     border-radius: 10px;
     border-style: none;
     padding: 0.2rem 0rem 0.2rem 0.4rem
+}
+
+input[type="checkbox"] {
+    width: 0.72rem;
+    height: 0.72rem;
+    margin-right: 0.5rem;
+}
+
+input[type="checkbox"]:checked {
+    accent-color: #362B48;
+    
 }
